--- a/src/app/booking-manage/view-internal-booking/branch-booking-tab/branch-booking-tab.component.html
+++ b/src/app/booking-manage/view-internal-booking/branch-booking-tab/branch-booking-tab.component.html
@@ -1,22 +1,22 @@
 <mat-card class="mat-elevation-z20 container-custom">
-  <mat-card-title align="center">MÀN HÌNH QUẢN LÝ BOOKING NỘI BỘ</mat-card-title>
+  <mat-card-title align="center">{{ "BookingManage.ViewInternalBooking.title" | translate }}</mat-card-title>
   <mat-card-subtitle align="center" style="color: blue; font-weight: bold">
-    Chi nhánh: {{ staffBookingInfo?.officeName }}
+    {{ "BookingManage.ViewInternalBooking.officeName" | translate }} {{ staffBookingInfo?.officeName }}
     <br />
-    Nhân viên: {{ staffBookingInfo?.staffName }}
+    {{ "BookingManage.ViewInternalBooking.staffName" | translate }} {{ staffBookingInfo?.staffName }}
   </mat-card-subtitle>
 
   <mat-card-content>
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formDate">
       <mat-form-field fxFlex="31%">
-        <mat-label>Từ ngày</mat-label>
+        <mat-label>{{ "ShareLable.FromDate" | translate }}</mat-label>
         <input matInput [matDatepicker]="transactionDateFromPicker" formControlName="fromDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateFromPicker></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field fxFlex="31%">
-        <mat-label>Đến ngày</mat-label>
+        <mat-label>{{ "ShareLable.ToDate" | translate }}</mat-label>
         <input matInput [matDatepicker]="transactionDateToPicker" formControlName="toDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateToPicker></mat-datepicker>
@@ -29,10 +29,10 @@
           color="primary"
           mat-raised-button
         >
-          Tìm kiếm &nbsp;<i class="fa fa-search" aria-hidden="true"></i>
+        {{ "ShareButton.Search" | translate }} &nbsp;<i class="fa fa-search" aria-hidden="true"></i>
         </button>
         <h3 *ngIf="!formDate">
-          Vui lòng chọn thời gian &nbsp; <i class="fa fa-calendar" style="align-self: center" aria-hidden="true"></i>
+          {{ "BookingManage.h3" | translate }} &nbsp; <i class="fa fa-calendar" style="align-self: center" aria-hidden="true"></i>
         </h3>
       </div>
     </div>
@@ -41,12 +41,12 @@
 
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
     <mat-form-field fxFlex="18%">
-      <mat-label>Chi nhánh</mat-label>
+      <mat-label>{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.lableOfficeName" | translate }}</mat-label>
       <input matInput type="text" formControlName="officeName" />
     </mat-form-field>
 
     <mat-form-field fxFlex="18%">
-      <mat-label>Nhân viên</mat-label>
+      <mat-label>{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.lableUserName" | translate }}</mat-label>
       <input matInput type="text" formControlName="userName" />
     </mat-form-field>
   </div>
@@ -58,14 +58,14 @@
           <img src="assets/images/icons/money.svg" />
           <div style="display: flex" fxLayout="column">
             <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{ totalAmountBooking | money }}</span>
-            <span>&nbsp;Tiền booking</span>
+            <span>&nbsp;{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.spanTotalAmountBooking" | translate }}</span>
           </div>
         </div>
         <div fxLayout="row wrap" fxFlex="20%" class="container m-b-20">
           <img src="assets/images/icons/transaction.svg" />
           <div style="display: flex" fxLayout="column">
             <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{ totalAmountFromBooking | money }}</span>
-            <span>&nbsp;Đã chi</span>
+            <span>&nbsp;{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.spanTotalAmountFromBooking" | translate }}</span>
           </div>
         </div>
         <div fxLayout="row wrap" fxFlex="20%" class="container m-b-20">
@@ -74,7 +74,7 @@
             <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{
               totalAmountBooking - totalAmountFromBooking | money
             }}</span>
-            <span>&nbsp;Còn lại</span>
+            <span>&nbsp;{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.spanTotalAmountAvailable" | translate }}</span>
           </div>
         </div>
       </div>
@@ -85,8 +85,8 @@
     <table mat-table class="mat-elevation-z8" [dataSource]="BookingList" matSort>
       <ng-container matColumnDef="bookingRefNo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Mã booking/<br />
-          Thời gian
+          {{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.bookingRef" | translate }}<br />
+          {{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.bookingTime" | translate }}
         </th>
         <td mat-cell *matCellDef="let booking">
           <a href="javascript:void(0)">
@@ -103,12 +103,12 @@
       </ng-container>
 
       <ng-container matColumnDef="bookingAmount">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Số tiền</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.totalBooking" | translate }}</th>
         <td mat-cell *matCellDef="let booking">{{ booking?.totalBooking | money }}</td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Trạng thái</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.status" | translate }}</th>
         <td mat-cell *matCellDef="let booking">
           <div>
             <mat-checkbox
@@ -118,26 +118,26 @@
               title="Chọn để xác nhận booking là hợp lệ"
             >
             </mat-checkbox>
-            <label *ngIf="!booking.checkedByStaff" style="color: red;"> Chờ xác thực</label>
+            <label *ngIf="!booking.checkedByStaff" style="color: red;"> {{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.checkedByStaff" | translate }}</label>
             <label *ngIf="booking.checkedByStaff" style="color: green"> √ {{ booking?.checkedByStaff }}</label>
           </div>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="getBookedAmount">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Đã chi</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.totalPaid" | translate }}</th>
         <td mat-cell *matCellDef="let booking">{{ booking.totalPaid | money }}</td>
       </ng-container>
 
       <ng-container matColumnDef="needBookedAmount">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Cần chi</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.needBookedAmount" | translate }}</th>
         <td mat-cell *matCellDef="let booking">{{ booking.totalBooking - booking.totalPaid | money }}</td>
       </ng-container>
 
       <ng-container matColumnDef="officeName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Chi nhánh /<br />
-          Người tạo
+          {{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.officeName2" | translate }}<br />
+          {{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.userName" | translate }}
         </th>
         <td mat-cell *matCellDef="let booking">
           {{ booking?.officeName }}
@@ -147,14 +147,14 @@
       </ng-container>
 
       <ng-container matColumnDef="txnDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ngày</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.txnDate" | translate }}</th>
         <td mat-cell *matCellDef="let booking">
           {{ booking?.txnDate | date: "dd/MM/yyyy " }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Hành động</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "BookingManage.ViewInternalBooking.BranchBookingTabComponent.action" | translate }}</th>
         <td mat-cell *matCellDef="let booking" style="width: 100px !important; ">
           <button mat-mini-fab color="default" (click)="showDetailBooking(booking.bookingRefNo)">
             <mat-icon title="Xem chi tiết "> remove_red_eye </mat-icon>
@@ -166,7 +166,7 @@
             color="primary"
             (click)="transferBookingInternal(booking)"
           >
-            <mat-icon title="Thực hiện chi tiền "> gavel </mat-icon>
+            <mat-icon [title]="'BookingManage.Dialog.DetailBranchBookingDialogComponent.iconTitleProcess'| translate"> gavel </mat-icon>
           </button>
         </td>
       </ng-container>
