--- a/src/app/booking-manage/dialog/detail-branch-booking/detail-branch-booking.component.html
+++ b/src/app/booking-manage/dialog/detail-branch-booking/detail-branch-booking.component.html
@@ -1,5 +1,5 @@
 <mat-card-content>
-  <h1 mat-dialog-title>Chi tiết thông tin chốt số</h1>
+  <h1 mat-dialog-title>{{ "BookingManage.Dialog.DetailBranchBookingDialogComponent.title" | translate }}</h1>
 </mat-card-content>
 <div mat-dialog-content>
   <mat-card>
@@ -13,25 +13,25 @@
         matSort
       >
         <ng-container matColumnDef="terminal">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Máy bán hàng</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{ "BookingManage.Dialog.DetailBranchBookingDialogComponent.terminalName" | translate }}</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction; let i = dataIndex">
             {{ transaction.terminalName }}
           </td>
         </ng-container>
         <ng-container matColumnDef="batchNo">
-          <th mat-header-cell *matHeaderCellDef>Số lô</th>
+          <th mat-header-cell *matHeaderCellDef>{{ "BookingManage.Dialog.DetailBranchBookingDialogComponent.batchNo" | translate }}</th>
           <td mat-cell *matCellDef="let transaction">{{ transaction.batchNo }} <br /></td>
         </ng-container>
 
         <ng-container matColumnDef="amount">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Số tiền / Số bill con</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{ "BookingManage.Dialog.DetailBranchBookingDialogComponent.amount" | translate }}</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">
             {{ transaction.amount | money }} / <label style="color: green; font-weight: bold;">{{ transaction.numOfBill }} </label>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="bill">
-          <th mat-header-cell *matHeaderCellDef>Bill tổng</th>
+          <th mat-header-cell *matHeaderCellDef>{{ "BookingManage.Dialog.DetailBranchBookingDialogComponent.sumaryBill" | translate }}</th>
           <td mat-cell *matCellDef="let transaction">
             <button
               *ngIf="transaction.clientId && transaction.resourceId"
@@ -40,7 +40,7 @@
               color="primary"
               (click)="download(transaction.clientId, transaction.resourceId)"
             >
-              <fa-icon icon="cloud-download-alt" matTooltip="Tải về"></fa-icon>
+              <fa-icon icon="cloud-download-alt" [matTooltip]="'BookingManage.Dialog.DetailBranchBookingDialogComponent.ToolTipDownload'| translate"></fa-icon>
             </button>
             <div *ngIf="!transaction.clientId && !transaction.resourceId"
             style="color: red; text-decoration: underline;">
@@ -62,7 +62,7 @@
           (click)="expandedElement = expandedElement === element ? null : element"
         ></tr>
       </table>
-      <h3 style="color: red; text-align: center" *ngIf="dataSource.length === 0">Chưa có giao dịch!</h3>
+      <h3 style="color: red; text-align: center" *ngIf="dataSource.length === 0">{{ "BookingManage.Dialog.DetailBranchBookingDialogComponent.h3" | translate }}</h3>
     </mat-card-content>
   </mat-card>
 </div>
