--- a/src/app/savings/savings-account-view/savings-account-view.component.html
+++ b/src/app/savings/savings-account-view/savings-account-view.component.html
@@ -31,8 +31,13 @@
             <span *ngIf="!savingsAccountData.status.rejected && !savingsAccountData.status.submittedAndPendingApproval">
               {{'Saving_Account_Component.ViewSavingAccount.labelCurrencyBalance'|translate}}
               : {{savingsAccountData.summary.accountBalance | money }}<br/>
-              {{'Saving_Account_Component.ViewSavingAccount.labelAvailableBalance'|translate}}
-              : {{savingsAccountData.summary.availableBalance | money }}<br/>
+              <label *ngIf="savingsAccountData.minRequiredBalance">
+                Số dư tối thiểu: {{savingsAccountData.minRequiredBalance | money}}<br/>
+              </label>
+              <h3 style="font-weight: bold;">
+                {{'Saving_Account_Component.ViewSavingAccount.labelAvailableBalance'|translate}}: {{savingsAccountData.summary.availableBalance - savingsAccountData.minRequiredBalance | money }}<br/>
+              </h3>
+
             </span>
           </p>
         </mat-card-subtitle>
@@ -206,7 +211,7 @@
             </tr>
             <tr *ngIf="savingsAccountData.enforceMinRequiredBalance">
               <td>Enforce Minimum Required Balance</td>
-              <td>{{savingsAccountData.enforceMinRequiredBalance | money }}</td>
+              <td>{{savingsAccountData.enforceMinRequiredBalance  }}</td>
             </tr>
             <tr *ngIf="savingsAccountData.summary.lastInterestCalculationDate">
               <td>Interest Recalculation Date</td>
