--- a/src/app/collections/individual-collection-sheet/individual-collection-sheet.component.html
+++ b/src/app/collections/individual-collection-sheet/individual-collection-sheet.component.html
@@ -4,7 +4,7 @@
 
     <div class="message">
       <i class="fa fa-exclamation-circle alert-check"></i>
-        No repayments and disbursal are available for selected client and meeting date
+      {{ "Collections.IndividualCollectionSheet.title" | translate }}
     </div>
 
   </div>
@@ -14,30 +14,30 @@
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" fxLayoutAlign.gt-sm="start center">
 
       <mat-form-field fxFlex="98%">
-        <mat-label>Branch Office</mat-label>
+        <mat-label>{{ "Collections.IndividualCollectionSheet.lableOfficeName" | translate }}</mat-label>
         <mat-select formControlName="officeId" required>
           <mat-option *ngFor="let office of officesData" [value]="office.id">
             {{ office.name }}
           </mat-option>
         </mat-select>
         <mat-error *ngIf="collectionSheetForm.controls.officeId.hasError('required')">
-          Branch Office is <strong>required</strong>
+          {{ "Collections.IndividualCollectionSheet.errorOffice" | translate }}<strong> {{ "Collections.IndividualCollectionSheet.requiredStrong" | translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-form-field fxFlex="98%">
-        <mat-label>Repayment date</mat-label>
+        <mat-label>{{ "Collections.IndividualCollectionSheet.lableRepaymentDate" | translate }}</mat-label>
         <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="transactionDatePicker" required
           formControlName="transactionDate" required>
         <mat-datepicker-toggle matSuffix [for]="transactionDatePicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDatePicker></mat-datepicker>
         <mat-error *ngIf="collectionSheetForm.controls.transactionDate.hasError('required')">
-          Repayment Date is <strong>required</strong>
+          {{ "Collections.IndividualCollectionSheet.errorRepaymentDate" | translate }}<strong>{{ "Collections.IndividualCollectionSheet.requiredStrong" | translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-form-field fxFlex="98%">
-        <mat-label>Staff</mat-label>
+        <mat-label>{{ "Collections.IndividualCollectionSheet.lableStaff" | translate }}</mat-label>
         <mat-select formControlName="staffId">
           <mat-option *ngFor="let loanOfficer of loanOfficerData" [value]="loanOfficer.id">
             {{ loanOfficer.displayName }}
@@ -48,9 +48,9 @@
     </div>
 
     <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-      <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+      <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
       <button mat-raised-button color="primary" [disabled]="!collectionSheetForm.valid">
-        <fa-icon icon="search"></fa-icon>&nbsp; Collection Sheet
+        <fa-icon icon="search"></fa-icon>&nbsp; {{ "Collections.IndividualCollectionSheet.action" | translate }}
       </button>
     </mat-card-actions>
 
@@ -66,45 +66,45 @@
 
       <div class="m-b-20">
         <button mat-raised-button color="primary" (click)="isCollapsed = false">
-          Parameters
+          {{ "Collections.IndividualCollectionSheet.btnParameters" | translate }}
         </button>
       </div>
 
       <ng-container *ngIf="loansDataSource">
 
-        <h2 class="mat-h2">Due Collections</h2>
+        <h2 class="mat-h2">{{ "Collections.IndividualCollectionSheet.h2Loan" | translate }}</h2>
 
         <table class="mat-elevation-z1" mat-table [dataSource]="loansDataSource" matSort>
 
           <ng-container matColumnDef="loanAccount">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Loan Account# </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableLoan.accountId" | translate }} </th>
             <td mat-cell *matCellDef="let loan"> {{ loan.accountId }}</td>
           </ng-container>
 
           <ng-container matColumnDef="productName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableLoan.productShortName" | translate }} </th>
             <td mat-cell *matCellDef="let loan"> {{ loan.productShortName }}({{ loan.productId }}) </td>
           </ng-container>
 
           <ng-container matColumnDef="clientName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Client Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableLoan.clientName" | translate }} </th>
             <td mat-cell *matCellDef="let loan"> {{ loan.clientName }}({{ loan.clientId }}) </td>
           </ng-container>
 
           <ng-container matColumnDef="totalDue">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Due </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableLoan.totalDue" | translate }} </th>
             <td mat-cell *matCellDef="let loan"> {{ loan.totalDue }} </td>
           </ng-container>
 
           <ng-container matColumnDef="charges">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Charges </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableLoan.feeDue" | translate }} </th>
             <td mat-cell *matCellDef="let loan"> {{ loan.feeDue }} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableLoan.Actions" | translate }} </th>
             <td mat-cell *matCellDef="let loan; let i = index">
-              <button mat-raised-button color="primary" (click)="showAndStorePaymentDetails('loans-accounts', loan, i)">Add Payment</button>
+              <button mat-raised-button color="primary" (click)="showAndStorePaymentDetails('loans-accounts', loan, i)">{{ "Collections.IndividualCollectionSheet.tableLoan.btnAddPayment" | translate }}</button>
             </td>
           </ng-container>
 
@@ -119,39 +119,39 @@
 
       <ng-container *ngIf="savingsDataSource">
 
-        <h2 class="mat-h2">Due Savings Collections</h2>
+        <h2 class="mat-h2">{{ "Collections.IndividualCollectionSheet.h2Saving" | translate }}</h2>
 
         <table class="mat-elevation-z1" mat-table [dataSource]="savingsDataSource" matSort>
 
           <ng-container matColumnDef="depositAccount">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Deposit Account </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableSaving.depositAccountType" | translate }} </th>
             <td mat-cell *matCellDef="let saving"> {{ saving.depositAccountType }}</td>
           </ng-container>
 
           <ng-container matColumnDef="savingsAccountNo">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Savings Account # </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableSaving.accountId" | translate }} </th>
             <td mat-cell *matCellDef="let saving"> {{ saving.accountId }} </td>
           </ng-container>
 
           <ng-container matColumnDef="productName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableSaving.productName" | translate }} </th>
             <td mat-cell *matCellDef="let saving"> {{ saving.productName }}({{ saving.productId }}) </td>
           </ng-container>
 
           <ng-container matColumnDef="clientName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Client Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableSaving.clientId" | translate }} </th>
             <td mat-cell *matCellDef="let saving"> {{ saving.clientName }}({{ saving.clientId }}) </td>
           </ng-container>
 
           <ng-container matColumnDef="totalDue">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Due </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableSaving.dueAmount" | translate }} </th>
             <td mat-cell *matCellDef="let saving"> {{ saving.dueAmount }} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Collections.IndividualCollectionSheet.tableSaving.Actions" | translate }} </th>
             <td mat-cell *matCellDef="let saving; let j = index">
-              <button mat-raised-button color="primary" (click)="showAndStorePaymentDetails('savings', saving, j)">Add Payment</button>
+              <button mat-raised-button color="primary" (click)="showAndStorePaymentDetails('savings', saving, j)">{{ "Collections.IndividualCollectionSheet.tableSaving.btnAddPayment" | translate }}</button>
             </td>
           </ng-container>
 
@@ -165,8 +165,8 @@
       </ng-container>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" (click)="submit()">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "Collections.IndividualCollectionSheet.tableSaving.btnCancel" | translate }}</button>
+        <button mat-raised-button color="primary" (click)="submit()">{{ "Collections.IndividualCollectionSheet.tableSaving.btnSubmit" | translate }}</button>
       </mat-card-actions>
 
     </mat-card>
